--- a/client/assets/styles/scss/sidebar/sidebar.scss
+++ b/client/assets/styles/scss/sidebar/sidebar.scss
@@ -37,6 +37,7 @@
 .sub-header {
   height: 45px;
   line-height: 45px;
+  min-height: 45px;
   padding: 0 15px;
   position: relative;
 }
